--- a/Dockerfile.onlybin
+++ b/Dockerfile.onlybin
@@ -1,14 +1,10 @@
-# Build Server
-FROM docker.io/golang:alpine AS build-server
+FROM debian:latest AS rename
 WORKDIR /Spark
-RUN apk update && apk add make git
 COPY . .
-RUN make server-releases
 RUN ./rename-server.sh
-RUN make client
 
-FROM docker.io/alpine:latest
+FROM debian:latest
 WORKDIR /app
-COPY --from=build-server /Spark/releases/spark .
-COPY --from=build-server /Spark/built .
+COPY --from=rename /Spark/releases/spark .
+COPY ./built ./built
 CMD [ "/app/spark" ]
